--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
